adding( delete, change status ): delete user function, change status user function

--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -18,6 +18,11 @@
     margin-right:10px;
 }
 
+.ml-10{
+    margin-left:10px;
+}
+
+
 h5 {
     text-transform: uppercase;
     font-weight: normal;
@@ -72,5 +77,18 @@ table strong {
 
 .select2-container .select2-selection--single{
     height: 34px !important;
+}
+
+.check-table{
+    width: 2em;
+    height: 2em;
+}
+
+.active-bg{
+    background-color: rgb(155, 222, 231) !important;
+}
+
+.gap-10{
+    gap: 10px;
 }
 
