add(manage post): complete create post catalouge

--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -116,3 +116,11 @@ table strong {
 .w-full{
     width: 100%;
 }
+
+.flex-col{
+    flex-direction: column;
+}
+
+#meta_description{
+    height: 200px;
+}
