--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -124,3 +124,71 @@ table strong {
 #meta_description{
     height: 200px;
 }
+
+#sortable{
+    list-style: none;
+    padding-left: 0;
+}
+
+.sortui .ui-state-default{
+    width: calc(20% - 2px);
+    float: left;
+    padding-left: 10px;
+    margin: 0 0 10px 0;
+    margin-bottom: 1%;
+    cursor: move;
+    background: transparent;
+    box-shadow: none;
+    border: 0;
+}
+
+.sortui .ui-state-default .thumb{
+    border: 1px solid #ddd;
+    height: 150px;
+    background: #fafbfc;
+}
+
+.image-scaledown{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.image-scaledown img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+}
+
+.click-to-upload{
+    text-align: center;
+    padding: 20px;
+    border: 1px dashed #b8b2b2;
+}
+
+#sortable .thumb{
+    position: relative;
+}
+
+#sortable .delete-image{
+    position: absolute;
+    background: linear-gradient(to bottom, #fff, #f9fafb);
+    color: red;
+    right: 0;
+    top: 0;
+    border: unset;
+    display: inline-block;
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+#sortable .delete-image:hover{
+    background: red;
+    color: #fff;
+}
+
+/* .hidden{
+    display: none;
+} */
