system config - inprogress

--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -59,6 +59,10 @@ table strong {
     display: flex;
 }
 
+.flex-end{
+    justify-content: end;
+}
+
 .search-btn{
     width:100%;
     height: 100%
@@ -290,4 +294,12 @@ a.active{
 
 .variant-select{
     width: 100%;
+}
+
+.italic{
+    font-style: italic
+}
+
+.text-bold{
+    font-weight: bold;
 }
