--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1832,7 +1832,8 @@ form .search-form button:hover {
 .card-2 figure img {
     border-radius: 10px;
     display: inline-block;
-    max-width: 80px
+    width: 80px;
+    height: 60px;
 }
 
 .card-2 .heading-card {
@@ -2686,26 +2687,6 @@ table .product-thumbnail img {
 
 .bg-green {
     background-color: #cee8e0
-}
-
-.custom-modal .modal-dialog {
-    border: 0;
-    border-radius: 0;
-    max-width: 888px!important;
-    overflow: hidden
-}
-
-.custom-modal .modal-dialog .modal-content {
-    border: 1px solid rgba(var(--color-brand-rgb),.4);
-    border-radius: 25px;
-    padding: 40px
-}
-
-.custom-modal .modal-dialog .btn-close {
-    position: absolute;
-    right: 30px;
-    top: 30px;
-    z-index: 2
 }
 
 .zoomContainer,.zoomWindow {
@@ -7328,7 +7309,7 @@ span.fi-rs-apps {
     left: 0;
     list-style-type: none;
     margin: 26px 0 0;
-    min-width: 270px;
+    width: 270px;
     opacity: 0;
     padding: 30px;
     position: absolute;
@@ -10036,10 +10017,6 @@ footer .hotline img {
         margin-left: 15px;
         width: 120px
     }
-
-    .custom-modal .modal-dialog {
-        max-width: 720px!important
-    }
 }
 
 @media only screen and (min-width: 768px)and (max-width:992px) {
@@ -10466,9 +10443,6 @@ footer .hotline img {
         margin-bottom: 25px
     }
 
-    .modal-open .modal {
-        padding-right: 0!important
-    }
 
     .vendor-wrap.style-2 {
         display: block
@@ -11008,10 +10982,6 @@ footer .hotline img {
         margin: 0 auto
     }
 
-    .modal-open .modal {
-        padding-right: 0!important
-    }
-
     .archive-header-3 {
         padding: 30px
     }
@@ -11030,9 +11000,6 @@ footer .hotline img {
         margin-bottom: 30px
     }
 
-    .modal-open .modal {
-        padding-right: 0!important
-    }
 }
 
 @media only screen and (max-width: 375px) {
@@ -11044,18 +11011,12 @@ footer .hotline img {
         padding: 30px
     }
 
-    .custom-modal .modal-dialog .modal-content {
-        padding: 0
-    }
 
     .deal .product-title {
         font-size: 25px;
         max-width: unset
     }
 
-    .modal-open .modal {
-        padding-right: 0!important
-    }
 }
 
 @media only screen and (min-width: 375px)and (max-width:667px) {
@@ -11734,17 +11695,6 @@ small {
     list-style: none
 }
 
-#quick-view-modal .modal-body.modal-empty {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    min-height: 500px
-}
-
-#quick-view-modal .form-group {
-    margin-bottom: 0
-}
-
 .form-subscribe button {
     white-space: nowrap
 }
@@ -12226,7 +12176,7 @@ small {
 
 .form-group--icon .product-cat-label:after {
     color: #444;
-    content: "ï„Œ";
+    content: "";
     display: inline-block;
     font-family: uicons-regular-straight!important;
     font-size: 10px;
@@ -12367,9 +12317,6 @@ small {
     margin-bottom: 80px
 }
 
-body.modal-open {
-    overflow: hidden!important
-}
 
 .product-cart-wrap {
     height: calc(100% - 30px)
@@ -13318,158 +13265,10 @@ main#main-section .single-page .single-content ul.bb-social-sharing {
 }
 
 .ck-content ol {
-    padding-inline-start:25px}
-
-[data-bb-toggle=quick-shop-modal] .modal-dialog {
-    max-width: 700px!important
+    padding-inline-start:25px
 }
 
-[data-bb-toggle=quick-shop-modal] .modal-content {
-    border-radius: 15px;
-    overflow: hidden;
-    padding: 0
-}
 
-[data-bb-toggle=quick-shop-modal] .btn-close {
-    align-items: center;
-    border-radius: 50%;
-    display: flex;
-    height: 30px;
-    justify-content: center;
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    width: 30px;
-    z-index: 10
-}
-
-[data-bb-toggle=quick-shop-modal] .modal-body {
-    padding: 0
-}
-
-[data-bb-toggle=quick-shop-modal] .modal-body.modal-empty {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    min-height: 200px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail {
-    padding-top: 30px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .title-detail {
-    color: var(--color-heading);
-    font-size: 24px;
-    line-height: 1.3;
-    margin-bottom: 15px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .pr_switch_wrap {
-    margin-bottom: 20px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .detail-extralink {
-    align-items: center;
-    display: flex;
-    gap: 15px;
-    margin-bottom: 20px;
-    margin-top: 20px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .detail-qty {
-    flex-shrink: 0
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .detail-qty .qty-val {
-    text-align: center;
-    width: 50px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .product-extra-link2 {
-    flex-grow: 1
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .product-extra-link2.has-buy-now-button {
-    display: flex;
-    gap: 10px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .product-extra-link2.has-buy-now-button .button {
-    flex: 1
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .button-add-to-cart:hover:not(.btn-disabled) {
-    box-shadow: 0 5px 15px rgba(0,0,0,.1);
-    transform: translateY(-2px)
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .button-loading {
-    opacity: .7;
-    pointer-events: none
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .font-xs {
-    border-top: 1px solid #f0f0f0;
-    margin-top: 15px;
-    padding-top: 15px
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .font-xs a {
-    align-items: center;
-    color: var(--color-brand);
-    display: flex;
-    font-size: 14px;
-    font-weight: 600;
-    gap: 5px;
-    text-decoration: none;
-    transition: all .3s
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .font-xs a:hover {
-    color: var(--color-brand-dark)
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .font-xs a:hover i {
-    transform: translateX(3px)
-}
-
-[data-bb-toggle=quick-shop-modal] .product-detail .font-xs a i {
-    transition: transform .3s
-}
-
-@media(max-width: 576px) {
-    [data-bb-toggle=quick-shop-modal] .modal-dialog {
-        margin:10px auto;
-        max-width: calc(100% - 20px)
-    }
-
-    [data-bb-toggle=quick-shop-modal] .product-detail {
-        padding: 20px
-    }
-
-    [data-bb-toggle=quick-shop-modal] .product-detail .title-detail {
-        font-size: 20px;
-        margin-bottom: 12px
-    }
-
-    [data-bb-toggle=quick-shop-modal] .product-detail .detail-extralink {
-        flex-wrap: wrap;
-        gap: 10px
-    }
-
-    [data-bb-toggle=quick-shop-modal] .product-detail .product-extra-link2 {
-        width: 100%
-    }
-
-    [data-bb-toggle=quick-shop-modal] .product-detail .product-extra-link2.has-buy-now-button {
-        flex-direction: column
-    }
-
-    [data-bb-toggle=quick-shop-modal] .product-detail .product-extra-link2.has-buy-now-button .button {
-        width: 100%
-    }
-}
 
 .shortcode-lazy-loading {
     position: relative;
