--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -7,7 +7,7 @@
 	position: fixed;
 	background-color: rgba(0,0,0,0.4);
 	padding-top: 5vh;
-	display:block;
+	display:none;
 }
 
 .modal > .modal-container {
@@ -29,7 +29,7 @@
 }
 
 .modal > .modal-container > .close:hover, .modal > .modal-container > .close:focus {
-  color: 	#FF0000;
+  color: #FF0000;
   text-decoration: none;
   cursor: pointer;
 }
@@ -68,7 +68,7 @@
     color: var(--color-brand);
 }
 
-.product-catalouge > .catalouge-list > .list-item {
+.modal-product-catalouge > .catalouge-list > .list-item {
     font-size: 16px;
     color:  var(--color-primary);
     border: 1px solid var(--color-secondary);
@@ -78,7 +78,7 @@
     text-align: center;
 }
 
-.product-variant > .variant-list > .list-item {
+.modal-product-variant > .variant-list > .list-item {
     font-size: 14px;
     font-weight: 700;
     color:  var(--color-grey-2);
@@ -90,34 +90,34 @@
     cursor: pointer;
 }
 
-.product-variant > .variant-list > .list-item:hover {
+.modal-product-variant > .variant-list > .list-item:hover {
     color:  var(--color-grey-9);
     background-color: var(--color-body);
 }
 
-.product-variant > .variant-list > .list-item.active {
+.modal-product-variant > .variant-list > .list-item.active {
     color:  var(--color-grey-9);
     background-color: var(--color-body);
 }
 
-.product-description > .description-content {
+.modal-product-description > .description-content {
     color: var(--color-text);
     font-size: 16px;
     font-weight: 500;
 }
 
-.product-image > .image-main {
+.modal-product-image > .image-main {
     width: 100%;
     height: 450px;
 }
 
-.product-image > .image-list > .list-item {
+.modal-product-image > .image-list > .list-item {
     width: 100px;
     height: 100px;
     cursor: pointer;
 }
 
-.product-image > .image-list > .list-item:hover, .product-image > .image-list > .list-item.active{
+.modal-product-image > .image-list > .list-item:hover, .modal-product-image > .image-list > .list-item.active{
     border: 1px solid var(--color-secondary);
     border-radius: 5px;
 }
@@ -127,6 +127,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.modal-product-price > .old-price {
+    text-decoration: line-through;
 }
 
 
