--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -133,4 +133,34 @@
     text-decoration: line-through;
 }
 
+.breadcrumb-item > .active {
+    color: var(--color-secondary);
+}
+
+.page-breadcrumb {
+    background: url(../imgs/banner-10.png) no-repeat 50%;
+    border-radius: 20px;
+    width: 100%;
+    height: 120px;
+    padding: 1em;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: start;
+    margin: 1em 0;
+}
+
+.widget > div > .widget-item {
+    padding: 5px 10px;
+    text-align: center;
+    background-color: #edf0ed;
+    border: 1px solid var(--color-brand-dark);
+    border-radius: 5px;
+}
+
+
+.widget > div > .widget-item:hover {
+    border-color: var(--bs-orange);
+}
+
 
