fix header mobile

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -6604,7 +6604,7 @@ h6.post-title {
 }
 
 .mobile-header-wrapper-style .mobile-header-wrapper-inner .mobile-header-content-area .mobile-menu-wrap nav .mobile-menu li.menu-item-has-children.active>.menu-expand i:before {
-    content: "ï„’"
+    content: "\f10c"
 }
 
 .mobile-header-wrapper-style .mobile-header-wrapper-inner .mobile-header-content-area .mobile-menu-wrap nav .mobile-menu li a {
