--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -59,6 +59,12 @@ table strong {
     object-fit: cover;
 }
 
+.img-contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .flex-space-between {
     justify-content: space-between;
 }
@@ -317,7 +323,6 @@ a.active{
     border:1px dashed #1791f2;
     color: #1791f2;
     padding: 5px 10px;
-    width: 127px;
 }
 
 .add-variant-btn:hover{
