--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -150,6 +150,11 @@
     object-fit: cover;
 }
 
+.img-contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .modal-product-price > .old-price {
     text-decoration: line-through;
 }
