--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -98,7 +98,7 @@
     text-align: center;
 }
 
-.modal-product-variant > .variant-list > .list-item {
+.modal-product-variant >  .variant-list > .list-item {
     font-size: 14px;
     font-weight: 700;
     color: var(--color-grey-2);
@@ -131,14 +131,26 @@
     height: 450px;
 }
 
-.modal-product-image > .image-list > .list-item {
+.modal-product-image > .product-swiper{
+    width: 100%;
+}
+
+.swiper-slide {
+    width: unset;
+}
+
+.swiper-pagination {
+    bottom: 0 !important;
+}
+
+.modal-product-image > .product-swiper > .image-list > .list-item {
     width: 100px;
     height: 100px;
     cursor: pointer;
 }
 
-.modal-product-image > .image-list > .list-item:hover,
-.modal-product-image > .image-list > .list-item.active {
+.modal-product-image > .product-swiper > .image-list > .list-item:hover,
+.modal-product-image > .product-swiper > .image-list > .list-item.active {
     border: 1px solid var(--color-secondary);
     border-radius: 5px;
     padding: 2px;
